--- a/pacman.conf
+++ b/pacman.conf
@@ -30,7 +30,8 @@ Architecture = auto
 
 # Misc options
 #UseSyslog
-#Color
+Color
+ILoveCandy
 #NoProgressBar
 # We cannot check disk space from within a chroot environment
 #CheckSpace
@@ -72,6 +73,10 @@ LocalFileSigLevel = Optional
 
 #[testing]
 #Include = /etc/pacman.d/mirrorlist
+
+[chaotic-aur]
+SigLevel = Optional TrustAll
+Include = /etc/pacman.d/chaotic-mirrorlist
 
 [core]
 Include = /etc/pacman.d/mirrorlist
