--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Install Arch Linux
+        run: curl -L https://github.com/zaoqi/github-actions-archlinux/raw/master/install.sh | sh
+      - name: Install mkarchiso
+        run: sudo pacman --noconfirm -Syu archiso
       - name: Build ISO
         run: ./build.sh
       - name: Get Version
