--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,8 +14,10 @@ jobs:
         uses: actions/checkout@v2
       - name: Install Arch Linux
         run: curl -L https://github.com/zaoqi/github-actions-archlinux/raw/master/install.sh | sh
+      - name: Fix Keyring p1
+        run: sudo pacman -Sy archlinux-keyring
       - name: Install mkarchiso
-        run: sudo pacman --noconfirm -Syu archiso
+        run: sudo pacman --noconfirm -S archiso
       - name: Build ISO
         run: ./build.sh
       - name: Get Version
