fix: Add trust all to everything.
I KNOW THIS IS STUPID

--- a/pacman.conf
+++ b/pacman.conf
@@ -79,15 +79,18 @@ SigLevel = Optional TrustAll
 Include = /etc/pacman.d/chaotic-mirrorlist
 
 [core]
+SigLevel = Optional TrustAll
 Include = /etc/pacman.d/mirrorlist
 
 [extra]
+SigLevel = Optional TrustAll
 Include = /etc/pacman.d/mirrorlist
 
 #[community-testing]
 #Include = /etc/pacman.d/mirrorlist
 
 [community]
+SigLevel = Optional TrustAll
 Include = /etc/pacman.d/mirrorlist
 
 # If you want to run 32 bit applications on your x86_64 system,
